refactor: 게시글 목록 조회 및 DTO 변환 로직 공통화